[gd_scene load_steps=5 format=3 uid="uid://d0upjut0xhh3q"]

[ext_resource type="Script" uid="uid://csxvmdf75nhiv" path="res://Eukaryote_Cell/organelle_basic.gd" id="1_1oivx"]
[ext_resource type="Texture2D" uid="uid://dv5bswgcwaig6" path="res://Eukaryote_Cell/resources/Nucleus_w_Rough_ER.png" id="2_1oivx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1oivx"]
radius = 18.524044

[sub_resource type="CircleShape2D" id="CircleShape2D_etl8j"]
radius = 141.59802

[node name="OrganelleBasic" type="Node2D"]
script = ExtResource("1_1oivx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.13867188, 0.13867188)
texture = ExtResource("2_1oivx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.0000305, 4.99997)
scale = Vector2(7.722716, 7.722716)
shape = SubResource("CircleShape2D_1oivx")
debug_color = Color(0.08056259, 0.7312266, 0.8417969, 0.41960785)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_etl8j")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
